# openAI_study

./: app.py  apresentacao.ipynb  pyproject.toml  speech2text.py
src/: app.py
src/prompts/: CEDAE.json  CEDAE.txt
transcriptios/: baiano.txt  colono-alemão.txt  mineiro.txt  sotaque-cloves.txt
